simple/services-canary-kubernetes.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ordermgr-canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: ordermgr
    spec:
      containers:
      - name: ordermgr 
        image: demo/kubeotprom-ordermgr:0.0.2
        ports:
        - name: web
          containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: accountmgr-canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: accountmgr
    spec:
      containers:
      - name: accountmgr
        image: demo/kubeotprom-accountmgr:0.0.2
        ports:
        - name: web
          containerPort: 8080
