simple/services-kubernetes.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1 
        image: demo/service1:v1
        ports:
        - name: web
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: service1
  labels:
    app: service1
spec:
  type: NodePort
  selector:
    app: service1
  ports:
  - name: web
    nodePort: 31900
    port: 8080
    protocol: TCP
    targetPort: web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2 
        image: demo/service2:v1
        ports:
        - name: web
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: service2
  labels:
    app: service2
spec:
  type: NodePort
  selector:
    app: service2
  ports:
  - name: web
    nodePort: 31901
    port: 8080
    protocol: TCP
    targetPort: web
