simple/services-istio-kubernetes.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ordermgr
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: ordermgr
        service: ordermgr
        version: 0.0.1
      annotations:
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: ordermgr 
        image: local/kubeotprom-ordermgr:0.0.1
        ports:
        - name: http
          containerPort: 8080
        - name: prometheus-jmx
          containerPort: 9099
---
kind: Service
apiVersion: v1
metadata:
  name: ordermgr
  labels:
    service: ordermgr
spec:
  type: LoadBalancer
  selector:
    service: ordermgr
  ports:
  - name: http
    port: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: accountmgr
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: accountmgr
        service: accountmgr
        version: 0.0.1
      annotations:
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: accountmgr 
        image: local/kubeotprom-accountmgr:0.0.1
        ports:
        - name: http
          containerPort: 8080
        - name: prometheus-jmx
          containerPort: 9099
---
kind: Service
apiVersion: v1
metadata:
  name: accountmgr
  labels:
    service: accountmgr
spec:
  type: LoadBalancer
  selector:
    service: accountmgr
  ports:
  - name: http
    port: 8080
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /buy
        backend:
          serviceName: ordermgr
          servicePort: 8080
      - path: /sell
        backend:
          serviceName: ordermgr
          servicePort: 8080
      - path: /fail
        backend:
          serviceName: ordermgr
          servicePort: 8080
---
